tests/neg/i14875.scala
object M {
  type B
}

export M.{B, B} // error
